deploy/k8s/docker-desktop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agat
  labels:
    app.kubernetes.io/name: agat
    app.kubernetes.io/part-of: agat
